just small change

--- a/php/main_start.html
+++ b/php/main_start.html
@@ -21,7 +21,7 @@
   catch (Exception $e) {
     $title = "Main window.";
   }
-  if (title_bool == true)
+  if ($title_bool == true)
   {
     $title = "Main window.";
   }
