--- a/HARLEM-WEB/php/main_start.html
+++ b/HARLEM-WEB/php/main_start.html
@@ -849,8 +849,12 @@ body{
       </div>
       <div class="content">
         <div>
-          <div><b>Follow us on Github:</b><a href="https://github.com/Mester-Oxdan">https://github.com/Mester-Oxdan</a></div>
+          <div><b>*YouTube: </b><a href="https://www.youtube.com/@Oxdan_products" target="_blank">https://www.youtube.com/@Oxdan_products</a><b style="margin-left: 10px;">*Kwork: </b><a href="https://kwork.com/user/jecob" target="_blank">https://kwork.com/user/jecob</a> </div>
+          <div><b>*Github:</b><a href="https://github.com/Mester-Oxdan" target="_blank">https://github.com/Mester-Oxdan</a><b style="margin-left: 10px;">*Fiverr: </b><a href="https://www.fiverr.com/jecob_567" target="_blank">https://www.fiverr.com/jecob_567</a></div>
+          <div><b>*Tiktok: </b><a href="www.tiktok.com/@oxdan_products." target="_blank">www.tiktok.com/@oxdan_products.</a><b style="margin-left: 10px;">*Website: </b><a href="https://oxdan.com" target="_blank">https://oxdan.com</a></div>
+          <div><b>*Instagram: </b><a href="https://instagram.com/oxdanpraduction" target="_blank">https://instagram.com/oxdanpraduction</a></div>
         </div>
+        
         <div><a class="image" href="https://codepen.io/z-" target="_blank" style="background-image: url(&quot;https://s3-us-west-2.amazonaws.com/s.cdpn.io/199011/happy.svg&quot;)"></a>
           <p>©2023 Harlem</p>
         </div>
