--- a/HARLEM-WEB/php/main_start.html
+++ b/HARLEM-WEB/php/main_start.html
@@ -838,7 +838,7 @@ body{
           width: min(2vw, 3.8vh); /* Adjusted width for landscape */
           height: min(2vw, 3.8vh); /* Adjusted height for landscape */
           position: absolute;
-          left: 37.5vw; /* Adjusted left position for landscape */
+          left: 37.5%; /* Adjusted left position for landscape 37.5*/
           top: 4vh; /* Adjusted top position for landscape */
       }
             .kwork{
@@ -879,6 +879,7 @@ body{
               font-size: min(2.3vh, 1.15vw);
               left: 3.1vw; /* Adjust left position using vw */
               top: 5vh; /* Adjust top position using vh */
+              white-space: nowrap;
           }
   
           /* Add margin-left using viewport units for better responsiveness */
