--- a/HARLEM-WEB/php/main_start.html
+++ b/HARLEM-WEB/php/main_start.html
@@ -838,7 +838,7 @@ body{
           width: min(2vw, 3.8vh); /* Adjusted width for landscape */
           height: min(2vw, 3.8vh); /* Adjusted height for landscape */
           position: absolute;
-          left: 37.5%; /* Adjusted left position for landscape 37.5*/
+          left: 37.5vw; /* Adjusted left position for landscape 37.5*/
           top: 4vh; /* Adjusted top position for landscape */
       }
             .kwork{
@@ -906,7 +906,7 @@ body{
               <b style="margin-left: 3.1vw;">Author Kwork:</b> <a href="https://kwork.com/user/jecob" target="_blank">https://kwork.com/user/jecob</a>
           </div>
           <div class="author-info" style="top: 15vh;">
-              <b>Author Tiktok:</b> <a href="www.tiktok.com/@oxdan_praduction" target="_blank">www.tiktok.com/@oxdan_products</a>
+              <b>Author Tiktok:</b> <a href="https://www.tiktok.com/@oxdan_praduction" target="_blank">www.tiktok.com/@oxdan_products</a>
               <b style="margin-left: 3.1vw;">Author Fiverr:</b> <a href="https://www.fiverr.com/jecob_567" target="_blank">https://www.fiverr.com/jecob_567</a>
           </div>
           <div class="author-info" style="top: 20vh;">
